plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.17.0'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group 'com.zerodyn.springforge'
version '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    maven {
        url 'https://maven.aliyun.com/repository/public/'
        allowInsecureProtocol = true
    }
    mavenCentral()
}

dependencies {
    implementation('org.freemarker:freemarker:2.3.32') {
        exclude group: 'com.github.ben-manes.caffeine', module: 'caffeine'
    }
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'com.alibaba.p3c:p3c-pmd:2.1.1'
    testImplementation("org.mockito:mockito-core:5.4.0")
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

tasks.test {
    useJUnitPlatform()
    jvmArgs '-Xmx1024m', '-Djava.system.class.loader=com.intellij.util.lang.PathClassLoader'
}

intellij {
    version = '2024.3.5'
    type = 'IU'
    plugins = ['java']
}

patchPluginXml {
    sinceBuild = '243'
    untilBuild = '243.*'
}